--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ layout: default
     {{ site.data.settings.author.name }}
   {% endif %}
 </span>
-{% include social-sharing.html %}
+<!-- {% include social-sharing.html %} -->
 {% include related-posts.html %}
 
 {% if site.disqus %}
