--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   {% endfor %}
   <div class="post-date"><a href="{{ site.github.url }}/menu/about.html">{{ site.data.settings.title }} | {{ site.data.settings.tagline }} by {{ site.data.settings.author.name }}</a></div>
 
-  // qq enterprise mail
+  <!-- qq enterprise mail -->
   <style>
   .bizmail_loginpanel{font-size:12px;width:300px;height:auto;border:1px solid #cccccc;background:#ffffff;}
   .bizmail_LoginBox{padding:10px 15px;}
