--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,7 @@ title: Home
 ---
 
 {% for post in paginator.posts %}
+{% if post.notshow == 1  %}
 <div class="posts">
   <h1>
     <a href="{{ site.github.url }}{{ post.url }}">{{ post.title }}</a>
@@ -16,6 +17,7 @@ title: Home
     <span class="post-date" style="margin-top:3px"><i class="fa fa-calendar" aria-hidden="true"></i> {{ post.date | date_to_string }} - <i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</span>
   </p>
 </div>
+{% endif %}
 {% endfor %}
 
 <!-- Pagination links -->
