--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,9 @@
   <h3 class="masthead-title">
     <a href="{{ site.github.url }}/">{{ site.data.settings.title }}</a>
     <small class="masthead-subtitle">{{ site.data.settings.tagline }}</small>
+
+    <link rel="stylesheet" href="/assets/css/mermaid.scss">
+
     {% include menu.html %}
   </h3>
 </header>
