--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <a href="{{ site.github.url }}/">{{ site.data.settings.title }}</a>
     <small class="masthead-subtitle">{{ site.data.settings.tagline }}</small>
 
-    <link rel="stylesheet" href="/assets/css/mermaid.scss">
+    <link rel="stylesheet" href="../assets/css/mermaid.scss">
 
     {% include menu.html %}
   </h3>
